<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_bookmarks"
        android:title="@string/nav_bookmarks" />
    <item
        android:id="@+id/nav_history"
        android:title="@string/nav_history" />
    <item
        android:id="@+id/nav_downloads"
        android:title="@string/nav_downloads" />
    <item
        android:id="@+id/nav_privacy"
        android:title="@string/nav_privacy" />
    <item
        android:id="@+id/nav_settings"
        android:title="@string/nav_settings" />
    <item
        android:id="@+id/nav_account"
        android:title="@string/nav_account" />
  </group>
</menu>
